@@ -4,7 +4,7 @@
     <head>
         <meta http-equiv="Content-Type" content="application/xhtml+xml; charset=utf-8" />
         <title tal:content="python:context.Title()">[Title]</title>
-        <link rel="stylesheet" href="css/main.css" type="text/css" />
+        <link rel="stylesheet" href="Css/main.css" type="text/css" />
     </head>
     <body tal:replace="structure python:context.getText().decode('utf-8')">
         ...
