@@ -1,0 +1,267 @@
+ div.generated-style {
+}
+div.generated-style-2 {
+}
+p {
+	font-family: "Times New Roman";
+	font-weight: normal;
+	font-style: normal;
+	font-size: 100%;
+	line-height: 1.20em;
+	text-decoration: none;
+	font-variant: normal;
+	text-indent: 0em;
+	text-align: left;
+	color: #000000;
+	margin: 0.30em 0em 0.4em 0em;
+}
+li {
+	font-family: "Times New Roman";
+	font-weight: normal;
+	font-style: normal;
+	font-size: 100%;
+	line-height: 1.20em;
+	text-decoration: none;
+	font-variant: normal;
+	text-indent: 0em;
+	text-align: left;
+	color: #000000;
+	margin: 0.30em 0em 0.4em 0em;
+}
+
+.note {
+	font-family: "Times New Roman";
+	font-style: normal;
+	font-size: 80%;
+	line-height: 1.20em;
+	text-decoration: none;
+	font-variant: normal;
+	text-indent: 10px;
+	text-align: left;
+	color: #000000;
+	margin: 2em 1em 1em 0.5em;
+}
+
+p.bold {
+	font-family: "Times New Roman";
+	font-weight: bold;
+	font-style: normal;
+	font-size: 100%;
+	line-height: 1.2em;
+	text-decoration: none;
+	font-variant: normal;
+	text-indent: 0em;
+	text-align: left;
+	color: #000000;
+	margin: 0.30em 0em 0.4em 0em;
+}
+h1 {
+	font-family: "Arial";
+	font-weight: bold;
+	font-style: normal;
+	font-size: 160%;
+	line-height: 1em;
+	text-decoration: none;
+	font-variant: normal;
+	text-indent: 0em;
+	text-align: left;
+	color: #000000;
+	margin: 0.50em 0em 0.6em 0em;
+	
+}
+
+h2 {
+	font-family: "Arial";
+	font-weight: bold;
+	font-style: normal;
+	font-size: 140%;
+	line-height: 1em;
+	text-decoration: underline;
+	font-variant: normal;
+	text-indent: 0em;
+	text-align: left;
+	color: #000000;
+	margin: 0.50em 0em 0.4em 0em;
+	page-break-before:always;
+	
+}
+h3 {
+	font-family: "Arial";
+	font-weight: bold;
+	font-style: normal;
+	font-size: 120%;
+	line-height: 1.2em;
+	text-decoration: none;
+	font-variant: normal;
+	text-indent: 0em;
+	text-align: left;
+	color: #000000;
+	margin: 1.2em 0em 0.20em 0em;
+}
+
+
+.centre {
+	
+	text-align: center;
+	margin: 1em auto 1em auto;
+	
+	
+}
+p.imagebreak {
+	text-indent: 0em;
+	text-align: center;
+	margin: 0em 0em 0em 0em;
+	page-break-before:always;
+	page-break-after:always;
+}
+
+p.imagebreakbefore {
+	text-align: center;
+	margin: 0.5em 0em 2em 0em;
+	page-break-before:always;	
+}
+p.breakafter {
+	line-height: 0.2em;
+	text-align: center;
+	margin: 0.5em 0em 2em 0em;
+	page-break-after:always;	
+}
+
+
+
+.callout bold {
+	font-family: "Times New Roman";
+	font-weight: bold;
+	font-style: normal;
+	font-size: 100%;
+	line-height: 1.20em;
+	text-decoration: none;
+	font-variant: normal;
+	text-indent: 0em;
+	text-align: left;
+	color: #000000;
+	
+}
+
+.callout p{
+	font-family: "Times New Roman";
+	font-weight: normal;
+	font-style: normal;
+	font-size: 100%;
+	line-height: 1.20em;
+	text-decoration: none;
+	font-variant: normal;
+	text-indent: 0em;
+	text-align: left;
+	color: #000000;
+	
+	
+}
+
+.callout h3 {
+	font-family: "Times New Roman";
+	font-weight: bold;
+	font-style: normal;
+	font-size: 120%;
+	line-height: 1em;
+	text-decoration: none;
+	font-variant: normal;
+	text-indent: 0em;
+	text-align: left;
+	color: #000000;
+	margin: 0.4em 0em 0.30em 0em;
+	
+}
+.callout emph {
+	font-family: "Times New Roman";
+	font-weight: normal;
+	font-style: italic;
+	font-size: 100%;
+	line-height: 1.20em;
+	text-decoration: none;
+	font-variant: normal;
+	text-indent: 0em;
+	text-align: left;
+	color: #000000;
+	
+	
+}
+.callout li {
+	font-family: "Times New Roman";
+	font-weight: normal;
+	font-style: normal;
+	font-size: 100%;
+	line-height: 1.20em;
+	text-decoration: none;
+	font-variant: normal;
+	text-indent: 0em;
+	text-align: left;
+	color: #000000;
+	margin: 0.1em 0em 0.57em 0.5em;
+	
+}
+
+.callout {
+	font-family: "Times New Roman";
+	font-weight: normal;
+font-style: normal;
+	font-size: 100%;
+	line-height: 1.20em;
+    background: none repeat scroll 0 0 #EEEEEE;
+    border-left: 1em solid #CCCCCC;
+    clear: both;
+    margin: 1em;
+    padding: 0.5em;
+	}
+	
+
+.quote, .pullquote {
+	font-family: "Times New Roman";
+	font-weight: normal;
+   
+    clear: both;
+    margin: 1em;
+    padding: 0.5em;
+	}
+	
+
+hr {
+	color: #FFFFFF;
+
+}
+
+hr.break {
+	color: #FFFFFF;
+	page-break-after:always;
+}
+
+.breakbefore {
+	page-break-before:always
+}
+
+
+
+.breakafter {
+	page-break-after:always
+}
+
+.wf-state-visible,
+.wf-state-published_eionet,
+.wf-state-new,
+.wf-state-closed,
+.wf-state-content_pending,
+.wf-state-draft,
+.wf-state-in-progress,
+.wf-state-private,
+.wf-state-rejected,
+.wf-state-retracted,
+.wf-state-submitted,
+.wf-state-webqa_pending {
+	background: url(../Images/draft.png);
+}
+
+img {
+	width: 80%;
+	margin: 0 auto;
+}
+
