@@ -5,10 +5,13 @@
   <metadata>
     <dc:title>%(TITLE)s</dc:title>
     <dc:identifier id="bookid">%(IDENTIFIER)s</dc:identifier>
+    %(METADATA_MORE)s
   </metadata>
   <manifest>
     <item id="ncx" href="toc.ncx" media-type="application/x-dtbncx+xml"/>
     <item id="content" href="content.xhtml" media-type="application/xhtml+xml"/>
+    <item href="Css/main.css" id="main.css" media-type="text/css"/>
+    %(MANIFEST_MORE)s
   </manifest>
   <spine toc="ncx">
     <itemref idref="content"/>
